--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,12 +48,18 @@ dependencies:
   flutter_stripe: ^11.3.0
   dio: ^5.7.0
   carousel_slider: ^5.0.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  #  ios: true
+  image_path: "assets/icon.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -88,6 +94,7 @@ flutter:
    - assets/images/electronics.jpg
    - assets/images/books.jpg
    - assets/images/accessories.jpg
+   - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
