--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_toggle_button: ^0.0.4
   timeago: ^3.7.1
   flutter_rating_bar: ^4.0.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
